--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Cse104</h1>
+      <h1 class="project-name">New Headline</h1>
       <h2 class="project-tagline"></h2>
       <a href="https://github.com/qwu1204/CSE104" class="btn">View on GitHub</a>
       <a href="https://github.com/qwu1204/CSE104/zipball/master" class="btn">Download .zip</a>
